test/errhandling/parallel/strict/coforall-throws-strict-error.good
coforall-throws-strict-error.chpl:4: In function 'test':
coforall-throws-strict-error.chpl:6: error: cannot throw in a non-throwing function
